src/index.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}



.sidebar{
  background:  #1f2937;
  color: white;
  width: 220px;
  min-height: 100vh;
  padding: 20px;
}

.sidebar ul{
  list-style-type: none;
}

.sidebar h2{
  margin-bottom: 20px;
}


.sidebar li{
  margin-bottom: 10px;
  font-size: 16px;
}


.sidebar-link {
  color: white;
  text-decoration: none;
  display: block;
  padding: 10px;
  border-radius: 4px;
}

.sidebar-link:hover {
  background: #374151; 
}


.topbar{
  height: auto;
  min-height: 12vh;
  background: #f3f4f6;
  display: flex;
  align-items: center;
  font-weight: 500;
  justify-content: space-evenly;
  gap: 10px; 
  border-bottom: 1px solid #ddd;
  flex-wrap: wrap;
   padding: 10px 20px;   
}

.topbar h2 {
  color: #1e40af; 
  font-size: 24px;
}

.app {
  display: flex;
  min-height: 100vh;
}


.app .main{
  flex: 1;
  display: flex;
  flex-direction: column;
}

.content{
  flex: 1;
}


.dashboard-heading{
  margin-bottom: 20px;
  text-align: center;
  margin-top: 20px;
}

.dashboard-heading h2{
  font-size: 24px;
  font-weight: 600;
  color: #1f2937;
}


.main-dashboard{
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 80px;
}



.card {
  background: white;
  border-radius: 10px;
  padding: 20px;
  width: 260px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
  transition: transform 0.2s ease, box-shadow 0.2s ease;
  text-align: center;
}



.card:hover {
  transform: translateY(-4px);
  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.12);
}

.student-header{
  display:flex;
  justify-content: space-evenly;
  height: 10vh;
  align-items: center;
}

.table-content{
  width: 90%;
  margin: auto;
  margin-top: 50px;
}


.input-form{
  width: 50%;
  margin:100px auto;
}

.input-form select{
  margin-top: 20px;
}


.main-cont{
  width: 95%;
  margin: auto;
  margin-top:80px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  background-color: #f9f9f9;   
  box-shadow: 0 2px 8px rgba(0,0,0,0.05); 
  padding: 20px 0px;
}

.searching {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  padding: 20px;               
  border-radius: 12px;         
}

.searching input {
  width: 50%;                  
  min-width: 250px;             
  padding: 12px 20px;           
  font-size: 1.1rem;            
  border: 1px solid #ccc;      
  border-radius: 25px;          
  outline: none;                
  box-shadow: 0 2px 6px rgba(0,0,0,0.1); 
  transition: all 0.2s ease;    
}

.searching input:focus {
  border-color: #4f46e5;        
  box-shadow: 0 4px 12px rgba(79,70,229,0.2);
}

